Fix featured gallery image size on mobile

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -520,7 +520,7 @@ nav a {
                 justify-content: center;
                 img {
                     max-height: 640px;
-                    max-width: 100%;
+                    width: auto;
                     border: 2px solid $white;
                 }
             }
@@ -562,6 +562,12 @@ nav a {
             .images {
                 grid-template-columns: auto;
                 margin: 0 1rem;
+                .featured-image {
+                    img {
+                        max-height: 500px;
+                        width: auto;
+                    }
+                }
                 .thumbnails {
                     margin: 0 1rem;
                 }
